--- a/ColorPicker/README
+++ b/ColorPicker/README
@@ -1,3 +1,8 @@
+Requirements:
+
+You need to have 'nvr' installed in your PATH.
+See https://github.com/mhinz/neovim-remote
+
 To compile:
 
 Edit Nvr.cpp and set NVIM_LISTEN_ADDRESS to whatever
