--- a/ColorPicker/README
+++ b/ColorPicker/README
@@ -22,7 +22,7 @@ Put your cursor on a color that you wish to change and press <F10>
 which will show the syntax group that you need to change (after 'hi').
 
 Then run 'colorpicker [syntax_group]' to edit that syntax group.
-See ~/.vim/colors/cwcolors.vim for all possible values of 'syntax_group',
+See ~/.config/nvim/colors/cwcolors.vim for all possible values of 'syntax_group',
 for example 'cStatement', 'cppExceptions', 'cppModifier' etc.
 
 When satisfied *copy* the hex value from the color picker with
