--- a/ColorPicker/README
+++ b/ColorPicker/README
@@ -18,7 +18,7 @@ Usage:
 $ NVIM_LISTEN_ADDRESS="/tmp/nvim_listen_address" nvim somefile.cpp
 
 Put your cursor on a color that you wish to change and press <F10>
-(or whatever you key you did bind this to, see dot_vim/README-init.vim)
+(or whatever key you did bind this to, see dot_config_nvim/README-init.vim)
 which will show the syntax group that you need to change (after 'hi').
 
 Then run 'colorpicker [syntax_group]' to edit that syntax group.
